GUI SJF WORKING Priority not