@@ -6,7 +6,7 @@ import models.Process;
 
 public class PriorityScheduler extends Scheduler {
 
-    private int contextSwitchTime;  // Variable to hold the context switch time
+    private final int contextSwitchTime;  // Variable to hold the context switch time
 
     public PriorityScheduler(List<Process> processList, int contextSwitchTime) {
         super(processList);
@@ -20,14 +20,15 @@ public class PriorityScheduler extends Scheduler {
 
         // Keep track of the order of execution for display
         List<Process> executedProcesses = new ArrayList<>();
+        List<Process> remainingProcesses = new ArrayList<>(processList);  // Create a copy of the process list
 
-        while (!processList.isEmpty() || !readyQueue.isEmpty()) {
+        while (!remainingProcesses.isEmpty() || !readyQueue.isEmpty()) {
             // Add processes to the ready queue if they've arrived
-            for (int i = 0; i < processList.size(); i++) {
-                Process process = processList.get(i);
+            for (int i = 0; i < remainingProcesses.size(); i++) {
+                Process process = remainingProcesses.get(i);
                 if (process.getArrivalTime() <= currentTime) {
                     readyQueue.add(process);
-                    processList.remove(i);
+                    remainingProcesses.remove(i);
                     i--; // Adjust index after removing a process
                 }
             }
@@ -38,11 +39,14 @@ public class PriorityScheduler extends Scheduler {
                 continue;
             }
 
-            // Sort the ready queue by priority (ascending order)
-            readyQueue.sort((p1, p2) -> Integer.compare(p1.getPriority(), p2.getPriority()));
+            // Sort the ready queue by priority (ascending order), breaking ties by arrival time
+            readyQueue.sort((p1, p2) -> {
+                int priorityCompare = Integer.compare(p1.getPriority(), p2.getPriority());
+                return (priorityCompare != 0) ? priorityCompare : Integer.compare(p1.getArrivalTime(), p2.getArrivalTime());
+            });
 
             // Pick the process with the highest priority
-            Process currentProcess = readyQueue.remove(0);
+            Process currentProcess = readyQueue.removeFirst();
 
             // Calculate start time (either current time or the arrival time, whichever is greater)
             int startTime = Math.max(currentTime, currentProcess.getArrivalTime());
@@ -50,10 +54,10 @@ public class PriorityScheduler extends Scheduler {
             // Calculate completion time
             int completionTime = startTime + currentProcess.getBurstTime();
 
-            // Calculate turnaround time: Turnaround Time = Completion Time - Arrival Time
-            currentProcess.setTurnaroundTime(completionTime - currentProcess.getArrivalTime() + contextSwitchTime);
+            // Set turnaround time: Turnaround Time = Completion Time - Arrival Time
+            currentProcess.setTurnaroundTime(completionTime - currentProcess.getArrivalTime());
 
-            // Calculate waiting time: Waiting Time = Turnaround Time - Burst Time
+            // Set waiting time: Waiting Time = Turnaround Time - Burst Time
             currentProcess.setWaitingTime(currentProcess.getTurnaroundTime() - currentProcess.getBurstTime());
 
             // Update current time after the process finishes
@@ -67,8 +71,9 @@ public class PriorityScheduler extends Scheduler {
             currentTime += contextSwitchTime; // Add context switch time after each process execution
         }
 
-        // Replace the original list with executed processes (ordered execution)
-        processList.addAll(executedProcesses);
+        // Keep the original process list intact for UI updates
+        processList.clear();
+        processList.addAll(executedProcesses);  // Re-add the processes in the order they were executed
 
         displayExecutionOrder();
         System.out.printf("Average Waiting Time: %.2f\n", calculateAverageWaitingTime());
@@ -82,20 +87,12 @@ public class PriorityScheduler extends Scheduler {
 
     @Override
     public double calculateAverageWaitingTime() {
-        int totalWaitingTime = 0;
-        for (Process process : processList) {
-            totalWaitingTime += process.getWaitingTime();
-        }
-        return Math.ceil(totalWaitingTime / (double) processList.size());
+        return super.calculateAverageWaitingTime();
     }
 
     @Override
     public double calculateAverageTurnaroundTime() {
-        int totalTurnaroundTime = 0;
-        for (Process process : processList) {
-            totalTurnaroundTime += process.getTurnaroundTime();
-        }
-        return Math.ceil(totalTurnaroundTime / (double) processList.size());
+        return super.calculateAverageTurnaroundTime();
     }
 
     @Override
